import java.util.ArrayList;

public class Season extends Series{

    private int seasonNumber;
    private ArrayList<String> list;

    public int season(int seasonNumber){
        return 1;
    }

    public int getSeasonNumber() {
        return seasonNumber;
    }

    public void addEpisodes(String episodeTitle){

    }
    public String toString(){
        return "";
    }
}

